--- a/src/main/resources/templates/luckynumbers.html
+++ b/src/main/resources/templates/luckynumbers.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generated Numbers</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Lucky Numbers</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bg-light">
 
 <div class="container my-5">
+    <!-- Header -->
     <h2 class="text-center mb-4">Randomly Generated Numbers</h2>
+
+    <!-- Greeting -->
+    <div class="card">
+        <p th:text="${message}">Here is your list of numbers:</p>
+    </div>
 
     <div class="row">
         <!-- Loop through each number and display the corresponding image -->
         <div class="col-md-3 mb-4" th:each="num : ${randomNumbers}">
             <div class="card text-center">
                 <!-- Corrected image path with the number variable interpreted properly -->
-                <img th:src="@{'/images/Number Pictures_page-' + ${num} + '.jpg'}" class="card-img-top" alt="Number Image">
+                <img th:src="@{'/images/Number Pictures_page-' + ${num} + '.jpg'}" class="card-img-top"
+                     alt="Number Image">
                 <div class="card-body">
                     <h5 class="card-title" th:text="${num}"></h5>
                 </div>
@@ -25,6 +33,8 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
